-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.15.0
-
None
-
-
85ed73daa38d73d3a7ab8629f9d39d89b3f57fca (qt/qtwebengine-chromium/80-based) 33aad68ea86dcb60a73f042552b067712de893b3 (qt/qtwebengine-chromium/83-based) 1df7cf576b730ce14ca0afc76666683a84b9c0d7 (qt/qtwebengine-chromium/87-based)
/opt/emlix/test/bin/arm-unknown-linux-gnueabi-gcc -MMD -MF obj/third_party/libjpeg_turbo/simd/jidctred-neon.o.d -DUSE_UDEV -DUSE_AURA=1 -DUSE_NSS_CERTS=1 -DUSE_OZONE=1 -DOFFICIAL_BUILD -DTOOLKIT_QT -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -DNO_UNWIND_TABLES -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -DCR_SYSROOT_HASH=76e6068f9f6954e2ab1ff98ce5fa236d3d85bcbd -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -I../../../../../qt-everywhere-src-5.15.0/qtwebengine/src/3rdparty/chromium/third_party/libjpeg_turbo -Igen -I../../../../../qt-everywhere-src-5.15.0/qtwebengine/src/3rdparty/chromium -fno-strict-aliasing --param=ssp-buffer-size=4 -fstack-protector -fno-unwind-tables -fno-asynchronous-unwind-tables -fPIC -pipe -pthread -march=armv7-a -mfloat-abi=hard -mtune=cortex-a9 -mfpu=neon -mthumb -Wall -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -Wno-psabi -Wno-unused-local-typedefs -Wno-maybe-uninitialized -Wno-deprecated-declarations -fno-delete-null-pointer-checks -Wno-comments -Wno-packed-not-aligned -Wno-dangling-else -Wno-missing-field-initializers -Wno-unused-parameter -fno-omit-frame-pointer -g0 -fvisibility=hidden -O3 -fno-ident -fdata-sections -ffunction-sections -std=gnu11 --sysroot=../../../../../../../../opt/emlix/test/sysroot -c ../../../../../qt-everywhere-src-5.15.0/qtwebengine/src/3rdparty/chromium/third_party/libjpeg_turbo/simd/arm/common/jidctred-neon.c -o obj/third_party/libjpeg_turbo/simd/jidctred-neon.o ../../../../../qt-everywhere-src-5.15.0/qtwebengine/src/3rdparty/chromium/third_party/libjpeg_turbo/simd/arm/common/jidctred-neon.c: In function 'jsimd_idct_4x4_neon': ../../../../../qt-everywhere-src-5.15.0/qtwebengine/src/3rdparty/chromium/third_party/libjpeg_turbo/simd/arm/common/jidctred-neon.c:224:30: warning: implicit declaration of function 'vld1_s16_x3'; did you mean 'vld1_s16'? [-Wimplicit-function-declaration] const int16x4x3_t consts = vld1_s16_x3(jsimd_idct_4x4_neon_consts); ^~~~~~~~~~~ vld1_s16 ../../../../../qt-everywhere-src-5.15.0/qtwebengine/src/3rdparty/chromium/third_party/libjpeg_turbo/simd/arm/common/jidctred-neon.c:224:30: error: invalid initializer ../../../../../qt-everywhere-src-5.15.0/qtwebengine/src/3rdparty/chromium/third_party/libjpeg_turbo/simd/arm/common/jidctred-neon.c:455:33: error: incompatible types when initializing type 'short unsigned int' using type 'uint8x8_t' uint16x4x2_t output_01_23 = \{ output_0123.val[0], output_0123.val[1] }; ^~~~~~~~~~~ ../../../../../qt-everywhere-src-5.15.0/qtwebengine/src/3rdparty/chromium/third_party/libjpeg_turbo/simd/arm/common/jidctred-neon.c:455:53: error: incompatible types when initializing type 'short unsigned int' using type 'uint8x8_t' uint16x4x2_t output_01_23 = \{ output_0123.val[0], output_0123.val[1] }; ^~~~~~~~~~~
For Gerrit Dashboard: QTBUG-84720 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
305861,2 | Fix libjpeg_turbo for ARM32 | 80-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |