Fix libjpeg_turbo for ARM32

Remove use of Aarch64 specific intrinsic and fix some illegal
implicit type casts allowed by clang.

Change-Id: Ib3958584412b3bf1b3c337d671020d8dc04eec9a
Fixes: QTBUG-84720
Reviewed-by: Michal Klocek <michal.klocek@qt.io>