chromium/third_party/libjpeg_turbo/simd/arm/common/jidctint-neon.c
@@ -346,7 +346,13 @@ static inline void jsimd_idct_islow_pass1_regular(int16x4_t row0,
                                                   int16_t *workspace_2)
 {
   /* Load constants for IDCT calculation. */
+#if defined(__aarch64__) || defined(__ARM64__) || defined(_M_ARM64)
   const int16x4x3_t consts = vld1_s16_x3(jsimd_idct_islow_neon_consts);
+#else
+  const int16x4x3_t consts = { vld1_s16(jsimd_idct_islow_neon_consts),
+                               vld1_s16(jsimd_idct_islow_neon_consts + 4),
+                               vld1_s16(jsimd_idct_islow_neon_consts + 8) };
+#endif
 
   /* Even part. */
   int16x4_t z2_s16 = vmul_s16(row2, quant_row2);
@@ -463,7 +469,13 @@ static inline void jsimd_idct_islow_pass1_sparse(int16x4_t row0,
                                                  int16_t *workspace_2)
 {
   /* Load constants for IDCT computation. */
+#if defined(__aarch64__) || defined(__ARM64__) || defined(_M_ARM64)
   const int16x4x3_t consts = vld1_s16_x3(jsimd_idct_islow_neon_consts);
+#else
+  const int16x4x3_t consts = { vld1_s16(jsimd_idct_islow_neon_consts),
+                               vld1_s16(jsimd_idct_islow_neon_consts + 4),
+                               vld1_s16(jsimd_idct_islow_neon_consts + 8) };
+#endif
 
   /* Even part. */
   int16x4_t z2_s16 = vmul_s16(row2, quant_row2);
@@ -537,7 +549,13 @@ static inline void jsimd_idct_islow_pass2_regular(int16_t *workspace,
                                                   unsigned buf_offset)
 {
   /* Load constants for IDCT computation. */
+#if defined(__aarch64__) || defined(__ARM64__) || defined(_M_ARM64)
   const int16x4x3_t consts = vld1_s16_x3(jsimd_idct_islow_neon_consts);
+#else
+  const int16x4x3_t consts = { vld1_s16(jsimd_idct_islow_neon_consts),
+                               vld1_s16(jsimd_idct_islow_neon_consts + 4),
+                               vld1_s16(jsimd_idct_islow_neon_consts + 8) };
+#endif
 
   /* Even part. */
   int16x4_t z2_s16 = vld1_s16(workspace + 2 * DCTSIZE / 2);
@@ -630,10 +648,10 @@ static inline void jsimd_idct_islow_pass2_regular(int16_t *workspace,
   int8x8_t cols_46_s8 = vqrshrn_n_s16(cols_46_s16, DESCALE_P2 - 16);
   int8x8_t cols_57_s8 = vqrshrn_n_s16(cols_57_s16, DESCALE_P2 - 16);
   /* Clamp to range [0-255]. */
-  uint8x8_t cols_02_u8 = vadd_u8(cols_02_s8, vdup_n_u8(CENTERJSAMPLE));
-  uint8x8_t cols_13_u8 = vadd_u8(cols_13_s8, vdup_n_u8(CENTERJSAMPLE));
-  uint8x8_t cols_46_u8 = vadd_u8(cols_46_s8, vdup_n_u8(CENTERJSAMPLE));
-  uint8x8_t cols_57_u8 = vadd_u8(cols_57_s8, vdup_n_u8(CENTERJSAMPLE));
+  uint8x8_t cols_02_u8 = vadd_u8(vreinterpret_u8_s8(cols_02_s8), vdup_n_u8(CENTERJSAMPLE));
+  uint8x8_t cols_13_u8 = vadd_u8(vreinterpret_u8_s8(cols_13_s8), vdup_n_u8(CENTERJSAMPLE));
+  uint8x8_t cols_46_u8 = vadd_u8(vreinterpret_u8_s8(cols_46_s8), vdup_n_u8(CENTERJSAMPLE));
+  uint8x8_t cols_57_u8 = vadd_u8(vreinterpret_u8_s8(cols_57_s8), vdup_n_u8(CENTERJSAMPLE));
 
   /* Transpose 4x8 block and store to memory. */
   /* Zipping adjacent columns together allows us to store 16-bit elements. */
@@ -670,7 +688,13 @@ static inline void jsimd_idct_islow_pass2_sparse(int16_t *workspace,
                                                  unsigned buf_offset)
 {
   /* Load constants for IDCT computation. */
+#if defined(__aarch64__) || defined(__ARM64__) || defined(_M_ARM64)
   const int16x4x3_t consts = vld1_s16_x3(jsimd_idct_islow_neon_consts);
+#else
+  const int16x4x3_t consts = { vld1_s16(jsimd_idct_islow_neon_consts),
+                               vld1_s16(jsimd_idct_islow_neon_consts + 4),
+                               vld1_s16(jsimd_idct_islow_neon_consts + 8) };
+#endif
 
   /* Even part. */
   int16x4_t z2_s16 = vld1_s16(workspace + 2 * DCTSIZE / 2);
@@ -721,10 +745,10 @@ static inline void jsimd_idct_islow_pass2_sparse(int16_t *workspace,
   int8x8_t cols_46_s8 = vqrshrn_n_s16(cols_46_s16, DESCALE_P2 - 16);
   int8x8_t cols_57_s8 = vqrshrn_n_s16(cols_57_s16, DESCALE_P2 - 16);
   /* Clamp to range [0-255]. */
-  uint8x8_t cols_02_u8 = vadd_u8(cols_02_s8, vdup_n_u8(CENTERJSAMPLE));
-  uint8x8_t cols_13_u8 = vadd_u8(cols_13_s8, vdup_n_u8(CENTERJSAMPLE));
-  uint8x8_t cols_46_u8 = vadd_u8(cols_46_s8, vdup_n_u8(CENTERJSAMPLE));
-  uint8x8_t cols_57_u8 = vadd_u8(cols_57_s8, vdup_n_u8(CENTERJSAMPLE));
+  uint8x8_t cols_02_u8 = vadd_u8(vreinterpret_u8_s8(cols_02_s8), vdup_n_u8(CENTERJSAMPLE));
+  uint8x8_t cols_13_u8 = vadd_u8(vreinterpret_u8_s8(cols_13_s8), vdup_n_u8(CENTERJSAMPLE));
+  uint8x8_t cols_46_u8 = vadd_u8(vreinterpret_u8_s8(cols_46_s8), vdup_n_u8(CENTERJSAMPLE));
+  uint8x8_t cols_57_u8 = vadd_u8(vreinterpret_u8_s8(cols_57_s8), vdup_n_u8(CENTERJSAMPLE));
 
   /* Transpose 4x8 block and store to memory. */
   /* Zipping adjacent columns together allow us to store 16-bit elements. */
